# minhkslib

./: CMakeLists.txt  LICENSE  README.md
include/: console.h  hkslua.h
lua/lua-5.1/: lua.cmake
source/: console.c  hkslua.c  minhkslib.c
